# chaos-dungeon

./: .gitignore  CLAUDE.md  README.md
cdk/: app.py  cdk.json  dynamodb get-item \  pyproject.toml  requirements-dev.txt
cdk/stacks/: __init__.py  api_stack.py  base_stack.py  hosting_stack.py
cdk/tests/: test_stacks.py
lambdas/: pyproject.toml  requirements-dev.txt  requirements.txt
lambdas/character/: __init__.py  handler.py  models.py  service.py
lambdas/dm/: __init__.py  bedrock_client.py  bestiary.py  claude_client.py  combat.py  combat_narrator.py  combat_parser.py  handler.py  models.py  parser.py  service.py
lambdas/dm/prompts/: __init__.py  campaigns.py  combat_prompt.py  context.py  mistral_format.py  output_format.py  rules.py  system_prompt.py
lambdas/session/: __init__.py  handler.py  models.py  service.py
lambdas/shared/: __init__.py  actions.py  becmi.py  campaigns.py  config.py  cost_guard.py  cost_limits.py  db.py  dice.py  exceptions.py  items.py  loot.py  models.py  secrets.py  token_tracker.py  utils.py
lambdas/tests/: __init__.py  conftest.py  test_becmi.py  test_bedrock_client.py  test_bestiary.py  test_character_handler.py  test_character_service.py  test_claude_client.py  test_combat.py  test_commerce.py  test_cost_guard.py  test_dice.py  test_dm_handler.py  test_dm_integration.py  test_dm_parser.py  test_dm_prompts.py  test_dm_service.py  test_item_authority.py  test_items.py  test_loot.py  test_mistral_format.py  test_secrets.py  test_session_handler.py  test_session_service.py  test_shared.py  test_token_tracker.py
(+161 files in other folders)
