[project]
name = "chaos-dungeon-lambdas"
version = "0.1.0"
description = "Lambda functions for Chaos Dungeon text-based RPG"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=shared --cov-report=term-missing"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["shared"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
